jdbcAuthentication convertion for basic authentication

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,20 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- jdbc Authentication Related Dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- jdbc Authentication Related Dependencies -->
+
+
 		<!-- Spring Security Related Dependencies -->
 
 		<dependency>
