--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 logging:
   level:
     root: INFO
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/workshop_security
+    username: root
+    password: pass
+    driver-class-name: com.mysql.cj.jdbc.Driver
