--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 logging:
   level:
     root: INFO
+server:
+  port: 8080
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/workshop_security_custom_table
@@ -15,9 +17,19 @@ spring:
       # will get exception. You can use "update" at the beginning, then you can select validate for value.
       # Or you can add this config detailed below thread
       # https://mkyong.com/spring-boot/spring-boot-mysql-table-db_name-hibernate_sequence-doesnt-exist/
-      ddl-auto: update
-      naming:
+     ddl-auto: update
+     naming:
         # if you not defined this configuration spring-jpa create tables and columns in lowercase format
         # if you set "PhysicalNamingStrategyStandardImpl" create tables and columns according to
         #@Table(name = "USERS_CUSTOM"), @Column(name = "username")
-        physical-strategy:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+keycloak:
+  auth-server-url: http://localhost:9090/auth
+  realm: Spring-Security-oAuth2
+  resource: spring-boot-api
+  public-client: true
+  security-constraints[0]:
+    securityCollections[0]:
+      patterns[0]: /customers/*
+    authRoles[0]: user
+  principal-attribute: preferred_username
